Closed Bug 353421 Opened 18 years ago Closed 18 years ago

autocomplete is broken

Categories

(Camino Graveyard :: Location Bar & Autocomplete, defect)

PowerPC
macOS
defect
Not set
major

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bdeb, Assigned: hwaara)

References

Details

(Keywords: fixed1.8.1, regression)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X; chrome://navigator/locale/navigator.properties; rv:1.9a1) Gecko/20060918 Camino/1.2+
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; chrome://navigator/locale/navigator.properties; rv:1.9a1) Gecko/20060918 Camino/1.2+

On 1.2+ 20060918, no autocomplete suggestions are made when a URL is typed.  Nor is there a dropdown.  Autocomplet works normally on 1.2+ 20060915

Reproducible: Always
Yeah, I see this in my own Camino trunk build, pulled last night, as well.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Target Milestone: --- → Camino1.1
I'm just going to go out on a limb and say that this was caused by bug 341504. CCing appropriate people.

(I'm also CCing Håkan as this bug might not be relevant if we switch to a Cocoa version of autocomplete, right?)
Blocks: 341504
Target Milestone: Camino1.1 → ---
Severity: normal → major
Component: Toolbars & Menus → Location Bar & Autocomplete
QA Contact: toolbars → location.bar
AutoCompleteTextField.mm has hardcoded the contract ID that it uses but AppComponents.mm is using XPFE's #define which I changed in bug 341504.

The simple fix is simply to hardcode the same contract ID.
An alternative fix is to remove that contract ID from AppComponents.mm, change the constructor into a simple constructor, and use the CID or other contract ID in AutoCompleteTextField.mm
Another fix is again to remove that contract ID from AppComponents.mm but make AutoCompleteTextField.mm to call the singleton getter directly.
Attached patch FixSplinter Review
Assignee: nobody → hwaara
Status: NEW → ASSIGNED
Attachment #239389 - Flags: superreview?(mikepinkerton)
Comment on attachment 239389 [details] [diff] [review]
Fix

sr=pink
Attachment #239389 - Flags: superreview?(mikepinkerton) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
verified w/ 22 Sep trunk nightly
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: