Make autocomplete work again. The contract ID was changed from under us, when xpfe revamped its autocomplete impl. sr=pinkerton, b=353421